...
      pointerEvents={visible ? 'box-none' : 'none'}
      style={[styles.weatherInterface, visible ? styles.visible : styles.hidden]}
    >
      <IconButton
        icon={ArrowLeftIcon}
        size="sm"
        testID="weather-exit"
        accessibilityLabel="Back from weather"
        onPress={onExit}
        style={[styles.mapTopBackButton, { top }]}
      />
      <IconButton
        icon={ArrowsClockwiseIcon}
...
