...
    transparent && styles.wrapTransparent,
    containerStyle,
  ]

  if (!onPress) {
    return (
      <View testID="battery-bar" style={style}>
        {content}
      </View>
    )
  }

  return (
...
